###################
Nagios Change Log
###################


1.0 - ??/??/2002
----------------
* Minor bug fixes in CGIs
* Minor bug fixes in sample config files
* Minor doc updates
* Minor bug fixes to init script
* Spec file updates
* Bug fix for flex host downtime
* Embedded perl bug fixe for arguments with spaces


1.0b6 - 09/15/2002
------------------
* Added wildcards and multiple hosts/hostgroups to host dependency
  and service dependency definitions
* Added wildcard support for members directive in hostgroup definitions
* Minor bug fixes and cleanups in CGIs
* Minor cleanups in the core
* Makefile fixes
* New version of snprintf() included that supports %f
* Notification interval for escalations now defaults to non-escalated value


1.0b5 - 08/12/2002
------------------
* Fixed another memory leak related to processing of passive checks
* Init script mods (killproc doesn't colllide with RedHat's killproc)
* Added minimalistic sample object config file (minimal.cfg)
* Memory leak fixes in the CGIs
* Minor interface changes to the status and TAC CGIs
* Bug fix in the notification CGI


1.0b4 - 07/04/2002
------------------
* Address field in host definitions is now optional in template-based
  config format.  Defaults to host name if not specified.
* Changed method of checking for user/group in RPM spec file
* Bug fixes in template-based object code
* Fixed memory leak when processing passive checks
* Added illegal_macro_output_chars variable to main config file to
  allow for stripping dangerous shell characters from plugin ouput
* Comment IDs are no longer re-numbered when Nagios (re)starts.  This
  applies only to the default comment data method (DB method never
  renumbered comments)


1.0b3 - 06/09/2002
------------------
* Bug fixes in template-based object code
* Bug fix in tac CGI for counting host and service states properly
* Default is now to check for external commands as often as possible
* Ping syntax for WAP interface moved to CGI config file